devel
-----

* Updated arangosync to v2.19.0-preview-4.

* Expose the "high water multiplier" for the in-memory cache subsystem via a
  new startup option `--cache.high-water-multiplier`.
  The high water multiplier is used to calculate the effective memory usage 
  limit for the in-memory cache subsystem. The cache's configured memory usage 
  limit (`--cache.size`) is multiplied by the high water multiplier, and the 
  resulting value is used as the effective memory limit. It defaults to 95%
  of the configured cache size.

  Note that this is a behavior change. Previous versions of ArangoDB set the
  high water multiplier to effectively 56% of the configured memory. The value
  was hard-coded in versions before 3.11.3, and is exposed since then with a
  default value of 56%. 
  3.12 now sets the default value for the high water multiplier to 95%, so that
  the configured memory limit for the cache subsystem is actually better
  honored than before.

* Wrap imports into SmartGraph edge collections via the REST import API
  (POST `/_api/import`) into a managed transaction, so that edge data is
  either completely inserted or not at all.

* Changed default values for the following options related to the in-memory
  cache subsystem:

  - `--cache.ideal-lower-fill-ratio` changed from 0.04 to 0.08
  - `--cache.ideal-upper-fill-ratio` changed from 0.25 to 0.33

  This allows slightly better hash table utilization and earlier memory
  reclamation.

* Added metric `rocksdb_cache_edge_empty_inserts_total` to count the number
  of inserts into the edge cache for non-connected edges.

* Renamed two edge-cache related metrics to improve naming consistency:
  - `rocksdb_cache_edge_effective_entries_size` was renamed to 
    `rocksdb_cache_edge_inserts_effective_entries_size_total` and was changed
    from a gauge to a counter.
  - `rocksdb_cache_edge_uncompressed_entries_size` was renamed to 
    `rocksdb_cache_edge_inserts_uncompressed_entries_size_total` and is now